scrollbar fix

--- a/app/assets/stylesheets/content/_product.css.scss
+++ b/app/assets/stylesheets/content/_product.css.scss
@@ -263,6 +263,9 @@
         &.active {
           .long {
             display: block;
+            .ps-scrollbar-x {
+              display: none !important;
+            }
           }
 
           .opener {
